Fixed horizontal scroll issue at 768px-1024px

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ main {
 }
 
 .widget-container-full, .widget-container-half {
-    width: 90vw;
+    width: 85vw;
     display: flex;
     margin: 10px auto;
     align-items: center;
